Fix overflow-x problem

--- a/css/layout.css
+++ b/css/layout.css
@@ -258,6 +258,7 @@ a:current {
 	width: 100%;
 	max-width: 1080px;
 	margin: 0 auto;
+	position: relative
 }
 
 .inv1 img {
